RESOLVED FIXED142055
bmalloc: Large object free list can grow infinitely
https://bugs.webkit.org/show_bug.cgi?id=142055
Summary bmalloc: Large object free list can grow infinitely
Geoffrey Garen
Reported 2015-02-26 14:11:23 PST
bmalloc: Large object free list can grow infinitely
Attachments
Patch (7.12 KB, patch)
2015-02-26 14:17 PST, Geoffrey Garen
kling: review+
Geoffrey Garen
Comment 1 2015-02-26 14:17:44 PST
WebKit Commit Bot
Comment 2 2015-02-26 14:19:42 PST
Attachment 247444 [details] did not pass style-queue: ERROR: Source/bmalloc/bmalloc/BoundaryTag.h:88: Please declare enum bitfields as unsigned integral types. [runtime/enum_bitfields] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3 2015-02-26 14:22:52 PST
Comment on attachment 247444 [details] Patch r=me
Geoffrey Garen
Comment 4 2015-02-26 14:24:53 PST
Note You need to log in before you can comment on or make changes to this bug.