Source/bmalloc/bmalloc/Sizes.h
@@ -82,6 +82,7 @@ namespace Sizes {
     static const size_t xLargeAlignment = vmPageSize;
 
     static const size_t freeListSearchDepth = 16;
+    static const size_t freeListGrowFactor = 2;
 
     static const uintptr_t typeMask = (superChunkSize - 1) & ~((superChunkSize / 4) - 1); // 4 taggable chunks
     static const uintptr_t smallType = (superChunkSize + smallChunkOffset) & typeMask;
